# designed-by-committee

./: LICENSE  README.md  SETUP.md  pyproject.toml
examples/: dev-portal-full-transcript.txt
src/dbc/: cli.py
src/dbc/agents/: __init__.py  committee_agent.py
src/dbc/committee/: __init__.py  committee_members.py  utils.py
src/dbc/prompts/committee/: casey_friday.py  fontaine_kerning.py  max_token.py  morgan_calendar.py  nina_edgecase.py  noah_actually.py  pat_attacksurface.py  sam_powerpoint.py
src/dbc/prompts/rounds/: __init__.py  discussion_summary.py  round_five.py  round_four.py  round_one.py  round_six.py  round_three.py  round_two.py  user_interrupt.py
src/dbc/prompts/system/: casey_friday.py  fontaine_kerning.py  morgan_calendar.py  nina_edgecase.py  noah_actually.py  pat_attacksurface.py  sam_powerpoint.py
src/dbc/workflow/: __init__.py  clarification_tool.py  committee_meeting.py  committee_meeting_swarm.py  swarm_config.py
